--- a/src/main/resources/templates/info/info-home.html
+++ b/src/main/resources/templates/info/info-home.html
@@ -13,13 +13,24 @@
 <nav th:replace="~{fragments/sidebar-fragment.html::sidebar('/info')}" ></nav>
 <main id="content-main">
     <div class="container-fluid">
-        <div th:replace="~{fragments/header-title-fragment.html::header-title('Информация')}"></div>
+        <div th:replace="~{fragments/header-title-fragment.html::header-title('Информация')}">
+        </div>
     <div class="card default-shadow mt-4">
         <div class="card-header">
             Обновления
         </div>
         <div class="card-body">
             <div class="alert alert-info">
+                <h5>v.2.1.1</h5>
+                <ol>
+                    <li>Теперь при раскрытии выпадающих списков с поиском, на страницах
+                        устройства и добавление нового устройства, курсор в поле поиска ставится автоматически.</li>
+                    <li>Производители отсортированы по алфавиту</li>
+                    <li>Исправлена ошибка. У пользователей отображались пустая вкладка "Устройства"
+                        и заблокированная вкладка "Расходники" на странице "Настройки". Функционал вкладок только для администраторов.</li>
+                </ol>
+            </div>
+            <div class="alert alert-secondary">
                 <h5>v.2.1.0</h5>
                 <ol>
                     <li>Теперь администраторы могут просмотреть историю пользователей прямо в программе (пока без поиска)</li>
@@ -30,8 +41,8 @@
                             Добавлено новое поле "Дата списания". Данное поле будет доступно при выборе статус
                             "Утилизировано" при добавлении\изменении устройства.
                         </li>
-                        <li>Появилась история каждого устройства</li>
-                        <li>Вернулась улучшенная версия технических характеристик устройств</li>
+<!--                        <li>Появилась история каждого устройства</li>-->
+<!--                        <li>Вернулась улучшенная версия технических характеристик устройств</li>-->
                         <li>
                             Исправлена ошибка, когда пользователя удаляли из телефонного
                             справочника. Вы могли не попасть на страницу устройства,
@@ -59,7 +70,7 @@
             <div class="alert alert-secondary">
                 <h5>v.2.0.2</h5>
                 <ol>
-                    <li>Исправлена ошибка при выгрузки в Excel</li>
+                    <li>Исправлена ошибка при выгрузке в Excel</li>
                     <ol>
                         <li>Была исправлена ошибка выгрузки в Excel, кода инвентарный номер заменялся 0 после 15-ого знака</li>
                     </ol>
