Text version update

--- a/src/main/resources/templates/info/info-home.html
+++ b/src/main/resources/templates/info/info-home.html
@@ -21,6 +21,13 @@
         </div>
         <div class="card-body">
             <div class="alert alert-info">
+                <h5>v.2.1.2</h5>
+                <ol>
+                    <li>Срочное исправление критической ошибки. При сохранении вы получали ошибку сервера 500,
+                        если устройство уже находилось в базе данных.</li>
+                </ol>
+            </div>
+            <div class="alert alert-secondary">
                 <h5>v.2.1.1</h5>
                 <ol>
                     <li>Теперь при раскрытии выпадающих списков с поиском, на страницах
