--- a/src/main/resources/templates/info/info-home.html
+++ b/src/main/resources/templates/info/info-home.html
@@ -17,7 +17,7 @@
         </div>
     <div class="card default-shadow mt-4">
         <div class="card-header">
-            Обновления
+            Обновления ntcn
         </div>
         <div class="card-body">
             <div class="alert alert-info">
