--- a/src/main/resources/templates/info/info-home.html
+++ b/src/main/resources/templates/info/info-home.html
@@ -21,6 +21,15 @@
         </div>
         <div class="card-body">
             <div class="alert alert-info">
+                <h5>v.2.2.2</h5>
+                <ol>
+                    <li>Страница устройств</li>
+                    <ol>
+                        <li>Добавлена история каждого устройства в отдельности</li>
+                    </ol>
+                </ol>
+            </div>
+            <div class="alert alert-secondary">
                 <h5>v.2.1.2</h5>
                 <ol>
                     <li>Срочное исправление критической ошибки. При сохранении вы получали ошибку сервера 500,
