--- a/src/main/resources/templates/settings/settings-user.html
+++ b/src/main/resources/templates/settings/settings-user.html
@@ -167,6 +167,12 @@
 
         <div class="card default-shadow mt-4">
             <div class="card-header">Все пользователи</div>
+            <div sec:authorize="${hasAnyRole('Admin')}" class="alert alert-success m-4" role="alert">
+                <h6 class="text-danger">Внимание!</h6> Кнопка "Удалить" лишь пометит пользователя как удаленного!
+                Такой пользователь более не сможет войти в программу.
+                А кнопка "Удалить навсегда" удалит пользователя из системы, а так же все действия выполняемые им,
+                например историю пользователя и историю устройств.
+            </div>
             <div class="card-body card-body-custom table-responsive">
                 <table id="tableUser" class="table">
                     <thead>
