--- a/src/main/resources/templates/info/info-home.html
+++ b/src/main/resources/templates/info/info-home.html
@@ -27,6 +27,7 @@
                     <ol>
                         <li>Добавлена история каждого устройства в отдельности</li>
                     </ol>
+                    <li>Мелкие визуальные изменения</li>
                 </ol>
             </div>
             <div class="alert alert-secondary">
