init add specifications branch

--- a/src/main/resources/templates/info/info-home.html
+++ b/src/main/resources/templates/info/info-home.html
@@ -89,7 +89,7 @@
                 <ol>
                     <li>Исправлена ошибка при выгрузке в Excel</li>
                     <ol>
-                        <li>Была исправлена ошибка выгрузки в Excel, кода инвентарный номер заменялся 0 после 15-ого знака</li>
+                        <li>Была исправлена ошибка выгрузки в Excel, когда инвентарный номер заменялся 0 после 15-ого знака</li>
                     </ol>
                 </ol>
             </div>
